--- a/src/css/christmascoupon.module.css
+++ b/src/css/christmascoupon.module.css
@@ -1,9 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .couponContainer {
     display: flex;
     justify-content: center;
@@ -20,7 +14,6 @@
     border-image-width: 30px;
     border-image-repeat: repeat;
     background-color: #C81D30;
-    height: 100vh;
     width: 750px;
 }
 
@@ -30,7 +23,6 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100vh;
     padding: 30px;
     gap: 20px;
 }
@@ -51,18 +43,22 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    font-size: 50px;
+    font-size: 30px;
     padding: 16px;
     color: #F8D7DC;
+    padding-top: 200px;
+    padding-bottom: 100px;
 }
 
 .couponMainBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 300px;
     height: 90px;
     cursor: pointer;
+    margin-bottom: 20px;
+    transition: all 0.3s;
 }
 
 .couponMainBox:hover {
@@ -74,41 +70,44 @@
     justify-content: center;
     align-items: center;
     width: 30%;
-    height: 90px;
+    height: 80px;
     background-color: #1E3932;
     color: #F8D7DC;
     border-bottom-left-radius: 6px;
     border-top-left-radius: 6px;
     border: 1px solid black;
     font-size: 20px;
+    font-weight: 600;
 }
 
 .couponMain2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
     width: 70%;
-    height: 90px;
+    height: 80px;
     background-color: #a11b1b;
     color: #F8D7DC;
     border-bottom-right-radius: 6px;
     border-top-right-radius: 6px;
     border: 1px solid black;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .couponMoveBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
-    width: 400px;
+    font-size: 20px;
+    width: 300px;
     height: 70px;
     background-color: #1E3932;
     color: #F8D7DC;
     border-radius: 6px;
     cursor: pointer;
+    margin-bottom: 150px;
+    transition: all 0.3s;
 }
 
 .couponMoveBox:hover {
