--- a/src/css/firstpurchase.module.css
+++ b/src/css/firstpurchase.module.css
@@ -7,11 +7,12 @@
 
 .firstSection {
   background-color: #f9f9f9;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  width: 750px;
-  padding: 20px;
-  text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 750px;
+    padding: 20px;
+    text-align: center;
+    padding-bottom: 75px;
 }
 
 .firstImgBox {
@@ -20,13 +21,13 @@
 
 .firstImg {
   max-width: 100%;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* border-radius: 12px; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .firstSection h1 {
-  margin-top: 10px;
-  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-bottom: 50px;
   font-weight: bold;
   color: #333;
   font-size: 24px;
@@ -37,11 +38,11 @@
 }
 
 .couponContainer {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 130px;
+    justify-content: center;
+    align-items: center;
 }
 
 .couponTitleBox {
@@ -55,12 +56,11 @@
 }
 
 .couponTitle {
-  color: black;
   font-weight: bold;
-  font-size: 22px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .couponTitle:before {
@@ -70,17 +70,17 @@
 }
 
 .couponMainBox {
-  display: flex;
-  width: 400px;
-  height: 70px;
-  border-radius: 6px;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  background-color: #253f39;
-  color: #fff;
-  transition: background-color 0.3s ease;
-  gap: 20px;
+    display: flex;
+    width: 325px;
+    height: 55px;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: #253f39;
+    color: #fff;
+    transition: background-color 0.3s ease;
+    gap: 20px;
 }
 
 .couponMainBox:hover {
@@ -89,12 +89,12 @@
 
 .couponDetail1 {
   color: #fff !important;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 .couponDetail2 {
   color: #fff !important;
-  font-size: 22px;
+  font-size: 18px;
   opacity: 0.8;
 }
