--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -22,7 +22,8 @@ body {
     padding-top: 10px;
     overflow: hidden;
     width: 100%;
-    height: 150px; 
+    height: 150px;
+    margin-top: 100px;
 }
 
 .footerContent {
@@ -32,9 +33,9 @@ body {
     border-radius: 100%;
     box-sizing: border-box;
     background-color: #000;
-    width: 100%;
+    width: 1200px;
     height: 1000px;
-    padding-top: 20px;
+    padding-top: 30px;
 }
   
 .companyInfo,
@@ -61,7 +62,7 @@ body {
 }
   
 .projectMembers div {
-    margin: 0 10px;
+    margin: 0px 7px;
 }
 
 .gitHubs {
