--- a/src/css/showing2.module.css
+++ b/src/css/showing2.module.css
@@ -25,7 +25,7 @@
     cursor: pointer;
     width: 655px;
     height: 600px;
-    border: solid 2px white;
+    /* border: solid 2px white; */
 
 }
 
@@ -35,14 +35,14 @@
     width: 595px;
     height: 495px;
     bottom: 105px;
-    border: solid 2px white;
+    /* border: solid 2px white; */
 }
 
 .contentBox {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    width: 1000px;
+    width: 1250px;
 }
 
 .flexBox {
@@ -172,7 +172,7 @@
     width: 1250px;
     height: 106px;
     background-color: rgb(91, 91, 91);
-    border: solid 2px rgb(255, 255, 255);
+    /* border: solid 2px rgb(255, 255, 255); */
     color: rgb(255, 255, 255);
 }
 
@@ -205,7 +205,7 @@
     border-top-left-radius: 6px;
     border: 1px solid black;
     font-size: 20px;
-    border: solid 2px white;
+    /* border: solid 2px white; */
 }
 
 .couponMain2 {
@@ -290,5 +290,5 @@
 }
 
 .mainText {
-    margin: 10px 0 0 20px;
+    margin: 10px 0 0 0px;
 }
