--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -29,6 +29,17 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Chosunilbo_myungjo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* body{
+    font-family: 'Chosunilbo_myungjo';
+} */
   
 .box{
     display: flex;
